<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chat w/Bot</string>
    
    <string name="title">Android Chat #Bot</string>
    <string name="title_register">Register - Android Chat</string>
    <string name="author_name">\u00a9 Sornram Kampeera</string>
    <string name="author_url">www.sornram9254.com</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_send">Send</string>
    <string name="serverIP">sornram9254.eu5.org</string>
    
    <!-- Actionn bar -->
    <!-- <string name="action_settings">Settings</string> -->
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    
    <!-- Chat -->
    <string name="msg_hit">Message</string>
    
    <!-- Login -->
    <string name="login_user">Username :</string>
    <string name="login_pass">Password :</string>
    <string name="login_channel">Channel :</string>
    
    <!-- Register -->
    <string name="register_user">Enter Username :</string>
    <string name="register_pass">Enter Password :</string>
    <string name="register_email">Enter E-mail :</string>

</resources>