<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionbar"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
        	android:id="@+id/layout_User"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/login_user"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.67"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textCapWords"
                android:padding="10dp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
        	android:id="@+id/layout_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/login_pass"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_pass"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:padding="10dp" >

            </EditText>

        </LinearLayout>
		<!--
		<LinearLayout
            android:id="@+id/layout_Channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="10dp"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="15dp"
               android:text="@string/login_channel"
               android:textColor="@color/white"
               android:textSize="18sp" />

            <EditText
                android:id="@+id/login_channel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textCapWords"
                android:padding="10dp" >

            </EditText>
        </LinearLayout>
         -->
        <LinearLayout
        	android:id="@+id/Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_btn"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/btn_login"
                android:textColor="@color/white" />
            
            <Button
                android:id="@+id/btnRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_btn"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_url"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>